[BZ #13848] alpha: Fix s_nearbyint implementation.